--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <div id="container">
         <h1>Color Game</h1>
+        <h4 id="wincolor"></h4>
         <div class="box box1"></div>
         <div class="box box2"></div>
         <div class="box box3"></div>
@@ -22,7 +23,10 @@
         <div class="box box6"></div>
         <div class="pt" id="result">
             <h1></h1>
+            <h3 class="color"></h3>
+            <button class="btn btn-danger">Restart</button>
         </div>
+        <button class="btn btn-danger" onclick="resetGame()">Restart</button>
     </div>
         
 <script src="script.js"></script>
