--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
         <div class="box box3"></div>
         <div class="box box4"></div>
         <div class="box box5"></div>
-        <div class="box box6"></div>
-        <div class="pt" id="result">
-            <h1></h1>
-            <h3 class="color"></h3>
-            <button class="btn btn-danger">Restart</button>
-        </div>
-        <button class="btn btn-danger" onclick="resetGame()">Restart</button>
+        <div class="box box6"></div>    
+        <h3 class="color pt" id="result"></h3> 
+        <br>
+        <button class="btn btn-danger" onclick="resetGame()">Restart</button>          
     </div>
         
 <script src="script.js"></script>
